samples/_failures_safe/1761650518_1b95b5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_468be257.c: In function ‘main’:
./samples/SAFE/__tmp_468be257.c:165:5: error: expected declaration or statement at end of input
  165 |     for (int i = 0; i < edge_count; i++) {
      |     ^~~
./samples/SAFE/__tmp_468be257.c:165:5: error: expected declaration or statement at end of input
